# binbook

./: .gitattributes  .gitignore  AGENTS.md  BINBOOK_DOCS_AND_ROADMAP.md.md  BINBOOK_FORMAT_SPEC.md  BINBOOK_POC_SPEC.md.md  CODEX_PROMPT_BINBOOK_POC.md.md  Cargo.toml  HANDOFF.md  README.md  pyproject.toml
binbook/: __init__.py  checksums.py  cli.py  constants.py  epub.py  epub_flow.py  fonts.py  hashes.py  images.py  inspect.py  kerning_proof.py  page_compiler.py  pixels.py  profiles.py  reader.py  render.py  rle.py  sections.py  strings.py  structs.py  text_rendering.py  viewer.py  writer.py
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  nav_burst_evidence.rs  nav_burst_runtime.rs
cli/tests/: hardware_diagnostic.rs  protocol.rs  serial_transport.rs
crates/binbook/: Cargo.toml
crates/binbook-compiler/: Cargo.toml
crates/binbook-compiler/src/: api.rs  compile.rs  error.rs  lib.rs  support.rs
crates/binbook-compiler/tests/: compile_epub.rs  compile_images.rs  warnings.rs
crates/binbook-compiler/tests/common/: mod.rs
crates/binbook-compress/: Cargo.toml
crates/binbook-compress/src/: lib.rs  packbits.rs
crates/binbook-compress/tests/: packbits.rs
crates/binbook-decompress/: Cargo.toml
crates/binbook-decompress/src/: error.rs  lib.rs  lz4.rs  packbits.rs
crates/binbook-decompress/tests/: lz4.rs  packbits.rs  streaming.rs
crates/binbook-encode/: Cargo.toml
crates/binbook-encode/src/: error.rs  hashing.rs  indices.rs  lib.rs  model.rs  policies.rs  profile_policies.rs  resource_indices.rs  strings.rs  writer.rs
crates/binbook-encode/tests/: layout.rs  roundtrip.rs
crates/binbook-encode/tests/common/: mod.rs
crates/binbook-epub/: Cargo.toml
crates/binbook-epub/src/: css.rs  error.rs  fonts.rs  html.rs  lib.rs  parser.rs
crates/binbook-epub/tests/: epub.rs  fixture.rs
crates/binbook-image/: Cargo.toml
crates/binbook-image/src/: compile.rs  decode.rs  error.rs  fit.rs  lib.rs  page_decode.rs
crates/binbook-image/tests/: compile.rs  decode.rs
crates/binbook-render/: Cargo.toml
crates/binbook-render/src/: document.rs  error.rs  font.rs  lib.rs  pagination.rs  raster.rs  warning.rs
crates/binbook-render/tests/: fonts.rs  golden.rs  navigation.rs  reflow.rs
crates/binbook-storage/: Cargo.toml
crates/binbook-storage/src/: enumerate.rs  filesystem.rs  lib.rs  read_at.rs
crates/binbook-storage/tests/: enumerate.rs  read_at.rs
crates/binbook-storage/tests/fixtures/: book_a.binbook
crates/binbook/src/: args.rs  atomic_output.rs  decode.rs  diag_protocol.rs  diag_response.rs  encode.rs  error.rs  exercise.rs  exercise_decode.rs  exercise_validation.rs  input.rs  inspect.rs  lib.rs  main.rs  nav_burst.rs  nav_burst_evidence.rs  nav_burst_runtime.rs  protocol.rs  serial_transport.rs
crates/binbook/tests/: compiler_cli.rs  hardware_diagnostic.rs  help.rs  protocol.rs  serial_transport.rs
crates/binbook/tests/fixture/: mod.rs
crates/embedded-sd-storage/: Cargo.toml
crates/embedded-sd-storage/src/: lib.rs  sd_filesystem.rs
crates/embedded-sd-storage/tests/: fat_image.rs
crates/embedded-sd-storage/tests/fixtures/: fat16_with_book.img
crates/ssd1677-driver/: Cargo.toml
crates/ssd1677-driver/src/: commands.rs  config.rs  driver.rs  error.rs  lib.rs  refresh.rs  wait.rs
crates/ssd1677-driver/tests/: async_wait.rs  commands.rs  refresh.rs  windows.rs
crates/ssd1677-driver/tests/common/: mod.rs
crates/xteink-x4-display/: Cargo.toml
crates/xteink-x4-display/src/: buffers.rs  engine.rs  engine_flow.rs  engine_state.rs  error.rs  events.rs  framebuffer.rs  lib.rs  native.rs  page_source.rs  panel.rs  plane_write.rs  probes.rs  profile.rs  refresh.rs  render.rs  render_timing.rs  stream.rs  ui_render.rs
crates/xteink-x4-display/tests/: cancellation.rs  engine.rs  probes.rs  refresh.rs  streaming.rs  validation.rs
crates/xteink-x4-display/tests/common/: mod.rs
docs/: README.md  ROADMAP.md  xteink-x4-grayscale-research.md
firmware/: Cargo.toml
firmware/crates/binbook-fw/: Cargo.toml
firmware/crates/binbook-fw/fixtures/: gray2_probe.binbook  nav_probe.binbook
firmware/crates/binbook-fw/src/: async_refresh.rs  async_refresh_tests.rs  board.rs  book.rs  diag.rs  diag_flash.rs  diag_log.rs  diag_storage.rs  display.rs  error.rs  flash.rs  input.rs  lib.rs  main.rs  menu.rs  panel_driver.rs  refresh.rs  resume.rs  runtime.rs  runtime_aggregator.rs  runtime_engine.rs  serial.rs  storage.rs
firmware/crates/binbook-fw/src/runtime/: diagnostic_aggregator.rs  diagnostic_console.rs  display_backend.rs  display_task.rs  input_task.rs  render_timing.rs
firmware/crates/binbook-fw/tests/: async_refresh.rs  board_adapters.rs  boundary_fifo.rs  diagnostic_acceptance.rs  diagnostic_commands.rs  diagnostic_completion.rs  diagnostic_core.rs  diagnostic_crash.rs  diagnostic_crash_codec.rs  diagnostic_crash_commands.rs  diagnostic_dispatch.rs  diagnostic_event_commands.rs  diagnostic_log_commands.rs  diagnostic_log_serial.rs  diagnostic_navigation.rs  diagnostic_runtime.rs  diagnostic_serial.rs  diagnostic_structured_log.rs  display_adapter.rs  firmware_logic.rs  input_storage.rs  runtime_aggregator.rs  runtime_aggregator_events.rs  runtime_engine.rs
rust/: Cargo.toml
rust/src/: chapter_index.rs  chunk_index.rs  decompress.rs  display_profile.rs  error.rs  header.rs  lib.rs  lz4_decompress.rs  nav_index.rs  page_index.rs  reader.rs  rle.rs  section.rs  string_table.rs  transition_index.rs
rust/tests/: integration.rs
rust/tests/fixtures/: sample.binbook
scripts/: analyze_timing.py  timing_breakdown.py  timing_cli.py  timing_report.py
tests/: conftest.py  test_checksums.py  test_chunk_validation.py  test_display_profile.py  test_encode_epub.py  test_epub.py  test_epub_flow.py  test_font_policy.py  test_font_resources.py  test_images.py  test_inspect.py  test_kerning_proof.py  test_nav_probe_fixture.py  test_pixels.py  test_render_text.py  test_rle.py  test_roundtrip.py  test_sections.py  test_strings.py  test_structs.py  test_support_cli.py  test_timing_analysis.py  test_validation.py  test_viewer.py  test_x4_chunked_writer.py  (+2 more)
(+119 files in other folders)
