[package]
name = "binbook-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for BinBook device management"

[dependencies]
clap.workspace = true
binbook-core.workspace = true
binbook-diagnostic-protocol.workspace = true
serialport = { workspace = true, optional = true }
serde_json.workspace = true

[features]
serial-device = ["dep:serialport"]
