[package]
name = "binbook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "BinBook binary raster-book format parser"

[features]
default = ["std", "lz4"]
std = ["alloc"]
alloc = []
lz4 = ["dep:lz4_flex"]

[dependencies]
lz4_flex = { workspace = true, optional = true }
