[package]
name = "binbook-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
binbook-core.workspace = true
binbook-document.workspace = true
binbook-encode.workspace = true
binbook-epub.workspace = true
binbook-image.workspace = true
binbook-render.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
zip.workspace = true
