[package]
name = "binbook-compress"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic BinBook compression encoders"

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
binbook-core.workspace = true
binbook-decompress.workspace = true

[lints]
workspace = true
