[package]
name = "binbook-encode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic BinBook container assembly"

[dependencies]
binbook-core.workspace = true
sha2.workspace = true

[dev-dependencies]
sha2.workspace = true

[lints]
workspace = true
