[package]
name = "binbook-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-agnostic BinBook file enumeration and ReadAt"

[dependencies]
binbook-core.workspace = true
heapless = { version = "0.8", default-features = false }

[lints]
workspace = true
