[package]
name = "binbook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for BinBook device management"

[dependencies]
clap.workspace = true
binbook-core.workspace = true
binbook-compiler.workspace = true
binbook-image.workspace = true
binbook-diagnostic-protocol.workspace = true
serialport = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace = true

[features]
serial-device = ["dep:serialport"]

[lints]
workspace = true

[dev-dependencies]
zip.workspace = true
