[package]
name = "ssd1677-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable embedded-hal SSD1677 e-paper controller driver"

[dependencies]
embedded-hal.workspace = true
embedded-hal-async.workspace = true

[dev-dependencies]
pollster = "0.4"

[lints]
workspace = true
