[package]
name = "xteink-x4-display"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Allocation-free BinBook display pipeline for the Xteink X4"

[dependencies]
binbook-core.workspace = true
binbook-decompress.workspace = true
gray2-render.workspace = true
ssd1677-driver.workspace = true
embedded-hal.workspace = true
embedded-hal-async.workspace = true

[features]
default = []

[lints]
workspace = true
