[package]
name = "binbook-fw"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "BinBook firmware for Xteink X4"

[dependencies]
xteink-hal = { path = "../xteink-hal" }
ssd1677-driver = { path = "../ssd1677-driver" }
binbook = { path = "../../../rust", default-features = false }
binbook-diagnostic-protocol = { path = "../binbook-diagnostic-protocol", optional = true }
embassy-sync = { version = "0.8.0", default-features = false }
nb = "1.1.0"
portable-atomic = { version = "1.13.1", default-features = false }
esp-backtrace = { version = "0.19.0", features = ["esp32c3", "panic-handler", "println"], optional = true }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c3"], optional = true }
esp-hal = { version = "1.1.1", features = ["esp32c3", "unstable"], optional = true }
embassy-executor = { version = "0.10.0", default-features = false, optional = true }
embassy-time = { version = "0.5.1", default-features = false, optional = true }
embassy-futures = { version = "0.1.2", optional = true }
esp-rtos = { version = "0.3.0", features = ["esp32c3", "embassy"], optional = true }
esp-println = { version = "0.17.0", default-features = false, features = ["esp32c3", "jtag-serial"], optional = true }
static_cell = { version = "2.1.1", default-features = false, optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-storage = { version = "0.9.0", features = ["esp32c3"], optional = true }
embedded-storage = { version = "0.3.1", optional = true }

[features]
firmware-bin = [
    "dep:esp-backtrace",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-hal",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-futures",
    "dep:esp-rtos",
    "dep:esp-println",
    "dep:static_cell",
]
debug-log = []
chunk-dirty-probe = []
diagnostic-console = [
    "dep:binbook-diagnostic-protocol",
    "dep:esp-storage",
    "dep:embedded-storage",
]

[[bin]]
name = "binbook-fw"
path = "src/main.rs"
test = false
doctest = false
bench = false
required-features = ["firmware-bin"]
