[package]
name = "binbook-fw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "BinBook firmware for Xteink X4"

[dependencies]
xteink-hal.workspace = true
ssd1677-driver.workspace = true
binbook-core.workspace = true
binbook-diagnostic-protocol = { workspace = true, optional = true }
embassy-sync.workspace = true
nb.workspace = true
portable-atomic.workspace = true
esp-backtrace = { workspace = true, features = ["esp32c3", "panic-handler", "println"], optional = true }
esp-bootloader-esp-idf = { workspace = true, features = ["esp32c3"], optional = true }
esp-hal = { workspace = true, features = ["esp32c3", "unstable"], optional = true }
embassy-executor = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embassy-futures = { workspace = true, optional = true }
esp-rtos = { workspace = true, features = ["esp32c3", "embassy"], optional = true }
esp-println = { workspace = true, features = ["esp32c3", "jtag-serial"], optional = true }
static_cell = { workspace = true, optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-storage = { workspace = true, features = ["esp32c3"], optional = true }
embedded-storage = { workspace = true, optional = true }

[features]
firmware-bin = [
    "dep:esp-backtrace",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-hal",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-futures",
    "dep:esp-rtos",
    "dep:esp-println",
    "dep:static_cell",
]
debug-log = []
chunk-dirty-probe = []
diagnostic-console = [
    "dep:binbook-diagnostic-protocol",
    "dep:esp-storage",
    "dep:embedded-storage",
]

[[bin]]
name = "binbook-fw"
path = "src/main.rs"
test = false
doctest = false
bench = false
required-features = ["firmware-bin"]
